# GCTlib

./: .gitignore  CMakeLists.txt  LICENSE  README
include/gct/: gctlib.h  types.h
sample/: CMakeLists.txt
sample/src/: decode.c  decode.cpp  encode.c  main.c
src/: common.c  common.h  decode.c  encode.c  gctlib.c
